question_01_unique_test

--- a/dbt_packages/customer360/models/staging/salesforce/_sf__sources.yaml
+++ b/dbt_packages/customer360/models/staging/salesforce/_sf__sources.yaml
@@ -11,5 +11,9 @@ sources:
         columns:
           - name: id
             tests:
-              - unique
+              - unique:
+                  config:
+                    severity: error
+                    error_if: ">5"
+                    wan_if: ">0"
               - not_null
