question_01_contacts_joined_with_transactions

--- a/dbt_packages/customer360/models/marts/marketing/_marketing__models.yml
+++ b/dbt_packages/customer360/models/marts/marketing/_marketing__models.yml
@@ -7,5 +7,13 @@ models:
     columns:
       - name: id
         tests:
-          - not_null
-          - unique
+          - not_null:
+              config:
+                serverity: error
+                error_if: ">5"
+                warn_if: ">0"
+          - unique:
+              config:
+                serverity: error
+                error_if: ">10"
+                warn_if: ">0"      
