--- a/dbt_packages/customer360/models/staging/web/_web__sources.yml
+++ b/dbt_packages/customer360/models/staging/web/_web__sources.yml
@@ -9,6 +9,10 @@ sources:
     tables:
       - name: transactions
         description: Contains a record per transaction made by customers
+        loaded_at_field: _loaded_at_utc
+        freshness: 
+          warn_after: {count: 12, period: hour}
+          error_after: {count: 24, period: hour}
         columns:
           - name: id
             tests:
