--- a/dbt_packages/customer360/models/staging/web/_web__stg.yaml
+++ b/dbt_packages/customer360/models/staging/web/_web__stg.yaml
@@ -18,3 +18,6 @@ models:
           - relationships:
                 to: ref('stg_sf__contacts')
                 field: new_id
+      - name: amount
+        tests: 
+          - value_above_zero
