--- a/profiles.yml
+++ b/profiles.yml
@@ -13,4 +13,16 @@ integration_tests:
       keepalives_idle: 0 # default 0, indicating the system default. See below
       connect_timeout: 10 # default 10 seconds
       retries: 1  # default 1 retry on error/timeout when opening connections
-    
+    cloud:
+      type: databricks
+      host: cloud.databricks-host_account_number_1234567
+      user: dbt
+      password: dbt
+      port: 443
+      dbname: dbt_on_databricks
+      schema: public
+      threads: 3
+      keepalives_idle: 0 # default 0, indicating the system default. See below
+      connect_timeout: 10 # default 10 seconds
+      retries: 1  # default 1 retry on error/timeout when opening connections   
+     
