Q6: apply jinja function to optimze customer model

--- a/dbt_packages/customer360/models/marts/marketing/_marketing__models.yml
+++ b/dbt_packages/customer360/models/marts/marketing/_marketing__models.yml
@@ -5,15 +5,11 @@ models:
     config:
       materialized: view
     columns:
-      - name: id
+      - name: transaction_id
         tests:
           - not_null:
               config:
                 serverity: error
                 error_if: ">5"
                 warn_if: ">0"
-          - unique:
-              config:
-                serverity: error
-                error_if: ">10"
-                warn_if: ">0"      
+          - unique
