--- a/dbt_packages/customer360/dbt_project.yml
+++ b/dbt_packages/customer360/dbt_project.yml
@@ -22,5 +22,7 @@ models:
   customer360:
     staging:
       +materialized: table
+      +schema: staging
     marts:
       +materialized: table
+      +schema: marts
