Q8: using post_hook to control access

--- a/dbt_packages/customer360/models/staging/salesforce/_sf__stg.yaml
+++ b/dbt_packages/customer360/models/staging/salesforce/_sf__stg.yaml
@@ -9,3 +9,8 @@ models:
         tests:
           - not_null
           - unique
+
+  - name: masked_contact
+    config:
+      materialized: view
+
